@startuml

title US014 - "As a User, I want to get the list of official publication types" - CD

skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam backgroundColor CornSilk
skinparam classBackgroundColor WhiteSmoke
skinparam classAttributeIconSize 0

class UIPublicationTypeList {
}

package "CONTROLLER" {
    class GetPublicationTypeListController {
        + getListOfPublicationTypes() : Iterable<PublicationType>
    }
}

package "PERSISTENCE" {
            package "MEM" {
                class MemoPublicationTypeRepo <<Repo>> {
                }
            }
}

package "DOMAIN" {
    package "PUBLICATIONTYPE" #b0c4d4 {
        class PublicationType <<Root>> <<Entity>> {
        }
    }

    package "REPOSITORY" {
        interface IPublicationTypeRepo <<Interface>> {
        }
    }
}

package "DDD" {
    interface IRepository <ID, T> <<Interface>> {
        save(T) : T
        findAll() : Iterable<T>
        ofIdentity(ID) : Optional <T>
        containsOfIdentity(ID) : boolean
    }
}


UIPublicationTypeList "1" ..> "1" GetPublicationTypeListController : invokes
GetPublicationTypeListController "1" --> "1" IPublicationTypeRepo : calls
MemoPublicationTypeRepo ..|> IPublicationTypeRepo
MemoPublicationTypeRepo --> PublicationType : persists
IPublicationTypeRepo --|> IRepository
@enduml
